--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,6 @@
   <title>Welcome to OpenShift</title>
 </head>
 <body>
-<h1>Szeretem a kutyákat és kollégáimat, de süteményt sütni sajnos nem szeretek.</h1>
+<h1>Hello, Openshift.</h1>
 </body>
 </html>
